<resources>
    <string name="app_name">Infinity Gym</string>
    <string name="welcome_title">WELCOME</string>
    <string name="welcome_subtitle">TO THE BEST GYM IN DAR</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="register_login">Already a member? Login Here</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="SignintoGym">SIGN INTO THE GYM</string>
    <string name="Session">TODAY\'S SESSION</string>
    <string name="nutrition">NUTRITION HIGHLIGHTS</string>
    <string name="store">GYM STORE</string>
    <string name="menu">MENU</string>
    <string name="logout">LOGOUT</string>
</resources>